--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/icons/font-awesome/css/font-awesome.css">
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
 
