--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/icons/font-awesome/css/font-awesome.css">
   <link href="assets/css/style.css" rel="stylesheet">
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <link id="currentTheme" rel="stylesheet" href="assets/css/colors/purple-dark.css">
 
   <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -23,7 +23,7 @@
   <div class="preloader">
     <div class="loader">
       <div class="loader__figure"></div>
-      <p class="loader__label">Admin Pro</p>
+      <!-- <p class="loader__label">Admin Pro</p> -->
     </div>
   </div>
   <app-root></app-root>
@@ -44,6 +44,6 @@
   <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
   <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!--Custom JavaScript -->
-  <script src="assets/js/custom.min.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 </html>
