back end control point

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>AdminPro</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="google-signin-client_id"
+    content="981247905213-lpi6b3beam5r6anbj77fl3qfq5v0qvad.apps.googleusercontent.com">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
   <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/icons/font-awesome/css/font-awesome.css">
@@ -28,6 +30,7 @@
   </div>
   <app-root></app-root>
 
+  <script src="https://apis.google.com/js/platform.js"></script>
   <!-- All Jquery -->
   <!-- ============================================================== -->
   <script src="assets/plugins/jquery/jquery.min.js"></script>
